--- a/.github/workflows/cd-dockerhub.yaml
+++ b/.github/workflows/cd-dockerhub.yaml
@@ -33,7 +33,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/qr-code-component:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
