--- a/.github/workflows/cd_dockerhub.yaml
+++ b/.github/workflows/cd_dockerhub.yaml
@@ -1,8 +1,8 @@
-name: CD to DockerHub
+name: CD - Push to DockerHub
 
 on:
   workflow_run:
-    workflows: [ "Run ESLINT" ]
+    workflows: [ "CI - Run ESLINT" ]
     types: [ completed ]
   push:
     branches: [ master ]
