--- a/.github/workflows/ci_eslint.yaml
+++ b/.github/workflows/ci_eslint.yaml
@@ -1,8 +1,8 @@
-name: Run ESLint
+name: CI - Run ESLint
 
 on:
   workflow_run:
-    workflows: [ "Run NPM audit" ]
+    workflows: [ "CI - Run NPM audit" ]
     types: [ completed ]
   pull_request:
     branches: [ master ]
